# zeta-project

./: README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst  zeta_project.rst
ken_project/: __init__.py  zeta.py
tests/: file3.csv  test_file.txt  test_zeta.py
zeta-project/: zeta.py
zeta_project/: zeta.py
