[tool.poetry]
name = "ken-project"
version = "0.1.0"
description = "ken-project is a test project to create a simple python library within a Poetry virtual environment"
authors = ["Silvia Pasciullo <pasciullo.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^7.4.2"
pandas = "^2.1.1"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
