[tool.poetry]
name = "zeta-project"
version = "0.1.0"
description = "zeta-project is a simple Python library with the implementation of Burrow's Zeta"
authors = ["Silvia Pasciullo <silvia.pasciullo@stud-mail.uni-wuerzburg.de>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^7.4.2"
pandas = "^2.1.1"
coverage = "^7.3.2"
sphinx = "^7.2.6"
spacy = "^3.7.2"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
